# sup3r

./: .buildinfo  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CITATION.cff  LICENSE  README.rst  api.html  codecov.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/ISSUE_TEMPLATE/: documentation_improvement.yaml  feature_request.md  installation_issue.yaml
.github/linters/: .flake8  .python-lint  .ruff
.github/workflows/: codecov.yml  gh_pages.yml  linter.yml  publish_to_pypi.yml  pull_request_tests.yml  release_drafter.yml
_autosummary/: sup3r.batch.batch_cli.html  sup3r.batch.html  sup3r.bias.abstract.AbstractBiasCorrection.html  sup3r.bias.abstract.html  sup3r.bias.base.DataRetrievalBase.html  sup3r.bias.base.html  sup3r.bias.bias_calc.DataRetrievalBase.html  sup3r.bias.bias_calc.LinearCorrection.html  sup3r.bias.bias_calc.MonthlyLinearCorrection.html  sup3r.bias.bias_calc.MonthlyScalarCorrection.html  sup3r.bias.bias_calc.ScalarCorrection.html  sup3r.bias.bias_calc.SkillAssessment.html  sup3r.bias.bias_calc.html  sup3r.bias.bias_calc_cli.html  sup3r.bias.bias_calc_cli.kickoff_local_job.html  sup3r.bias.bias_calc_cli.kickoff_slurm_job.html  sup3r.bias.bias_calc_vortex.BiasCorrectUpdate.html  sup3r.bias.bias_calc_vortex.VortexMeanPrepper.html  sup3r.bias.bias_calc_vortex.html  sup3r.bias.bias_correct_means.BiasCorrectUpdate.html  sup3r.bias.bias_correct_means.VortexMeanPrepper.html  sup3r.bias.bias_correct_means.html  sup3r.bias.bias_transforms.get_spatial_bc_factors.html  sup3r.bias.bias_transforms.get_spatial_bc_presrat.html  sup3r.bias.bias_transforms.get_spatial_bc_quantiles.html  sup3r.bias.bias_transforms.global_linear_bc.html  sup3r.bias.bias_transforms.html  sup3r.bias.bias_transforms.local_linear_bc.html  sup3r.bias.bias_transforms.local_presrat_bc.html  sup3r.bias.bias_transforms.local_qdm_bc.html  sup3r.bias.bias_transforms.monthly_local_linear_bc.html  sup3r.bias.html  sup3r.bias.mixins.FillAndSmoothMixin.html  sup3r.bias.mixins.ZeroRateMixin.html  sup3r.bias.mixins.html  sup3r.bias.presrat.PresRat.html  sup3r.bias.presrat.html  sup3r.bias.qdm.PresRat.html  sup3r.bias.qdm.QuantileDeltaMappingCorrection.html  sup3r.bias.qdm.html  (+604 more)
_cli/: cli.html  sup3r.html
_modules/: index.html
_modules/sup3r/: utilities.html
_sources/: api.rst  index.rst.txt
_sources/_autosummary/: sup3r.batch.batch_cli.rst.txt  sup3r.batch.rst  sup3r.batch.rst.txt  sup3r.bias.abstract.AbstractBiasCorrection.rst  sup3r.bias.abstract.rst  sup3r.bias.base.DataRetrievalBase.rst  sup3r.bias.base.rst  sup3r.bias.bias_calc.DataRetrievalBase.rst.txt  sup3r.bias.bias_calc.LinearCorrection.rst  sup3r.bias.bias_calc.LinearCorrection.rst.txt  sup3r.bias.bias_calc.MonthlyLinearCorrection.rst  sup3r.bias.bias_calc.MonthlyLinearCorrection.rst.txt  sup3r.bias.bias_calc.MonthlyScalarCorrection.rst  sup3r.bias.bias_calc.MonthlyScalarCorrection.rst.txt  sup3r.bias.bias_calc.ScalarCorrection.rst  sup3r.bias.bias_calc.SkillAssessment.rst  sup3r.bias.bias_calc.SkillAssessment.rst.txt  sup3r.bias.bias_calc.rst  sup3r.bias.bias_calc.rst.txt  sup3r.bias.bias_calc_cli.kickoff_local_job.rst  sup3r.bias.bias_calc_cli.kickoff_slurm_job.rst  sup3r.bias.bias_calc_cli.rst  sup3r.bias.bias_calc_vortex.BiasCorrectUpdate.rst  sup3r.bias.bias_calc_vortex.VortexMeanPrepper.rst  sup3r.bias.bias_calc_vortex.rst  sup3r.bias.bias_correct_means.BiasCorrectUpdate.rst.txt  sup3r.bias.bias_correct_means.VortexMeanPrepper.rst.txt  sup3r.bias.bias_correct_means.rst.txt  sup3r.bias.bias_transforms.get_spatial_bc_factors.rst.txt  sup3r.bias.bias_transforms.get_spatial_bc_presrat.rst.txt  sup3r.bias.bias_transforms.get_spatial_bc_quantiles.rst.txt  sup3r.bias.bias_transforms.global_linear_bc.rst  sup3r.bias.bias_transforms.local_linear_bc.rst  sup3r.bias.bias_transforms.local_presrat_bc.rst  sup3r.bias.bias_transforms.local_qdm_bc.rst  sup3r.bias.bias_transforms.monthly_local_linear_bc.rst  sup3r.bias.bias_transforms.rst  sup3r.bias.bias_transforms.rst.txt  sup3r.bias.mixins.FillAndSmoothMixin.rst  sup3r.bias.mixins.ZeroRateMixin.rst  (+648 more)
_sources/_cli/: cli.rst
_sources/examples/: examples.rst.txt
_static/: custom.css  documentation_options.js
docs/: Makefile  README.md  requirements.txt
docs/source/: conf.py  index.rst
examples/: examples.html  sup3rcc.html  sup3rwind.html  using_the_data.ipynb
examples/sup3rcc/: README.rst  env.yml  using_the_data.ipynb
examples/sup3rwind/: README.rst  env.yml  running_sup3r_models.ipynb
misc/: examples.html  installation.html  installation_usage.html
real/: gen_2x_12x_14f_0.json  gen_2x_12x_14f_1.json  gen_2x_12x_14f_2.json  gen_2x_12x_14f_3.json  gen_2x_12x_14f_4.json  gen_2x_1x_14f.json  gen_2x_1x_14f_0.json  gen_2x_1x_14f_1.json  gen_2x_1x_14f_2.json  gen_2x_1x_14f_3.json  train.py
sup3r/: __init__.py  cli.py  sup3r.py  typing.py  version.py
sup3r/batch/: __init__.py  batch.py  batch_cli.py
sup3r/bias/: __init__.py  abstract.py  (+11 more)
tests/: None  conftest.py  exec.sh  run_out_conditional_moments_feat.py  run_out_conditional_moments_st.py  run_train_conditional_moments_feat.py  run_train_conditional_moments_pad.py  run_train_conditional_moments_st.py  test_bias_calc.py  test_bias_correction.py  test_cli.py  test_custom_loss.py  test_data_handling.py  test_data_handling_h5.py  test_data_handling_h5_cc.py  test_data_handling_nc.py  test_data_handling_nc_cc.py  test_data_handling_nsrdb.py  test_data_handling_solar_cc.py  test_data_handling_wrf.py  test_exo_data_handling.py  test_feature_handling.py  test_forward_pass.py  test_gen_handling.py  test_linear_model.py  test_load_configs.py  test_multi_step.py  test_out_conditional_moments.py  test_out_conditional_moments_feat.py  test_out_conditional_moments_st.py  test_output_handling.py  test_pipeline.py  test_qa.py  test_solar_module.py  test_spatial_model.py  test_surface_model.py  test_train_cc.py  test_train_conditional_moments.py  test_train_conditional_moments_feat.py  test_train_conditional_moments_pad.py  (+9 more)
(+623 files in other folders)
