[build-system]
requires = [
  "setuptools >= 61.0",
  "setuptools_scm[toml] >= 8",
]
build-backend = "setuptools.build_meta"

[project]
name = "NREL-sup3r"
dynamic = ["version"]
description = "Super Resolving Renewable Resource Data (sup3r)"
keywords = ["sup3r", "NREL"]
readme = "README.rst"
authors = [
  {name = "Brandon Benton", email = "brandon.benton@nrel.gov"},
]
license = {text = "BSD-3-Clause"}
requires-python = ">= 3.8"
classifiers=[
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "NREL-rex>=0.2.84",
  "NREL-phygnn>=0.0.23",
  "NREL-gaps>=0.6.0",
  "NREL-farms>=1.0.4",
  "dask>=2022.0",
  "h5netcdf>=1.1.0",
  "cftime>=1.6.2",
  "matplotlib>=3.1",
  "numpy>=1.7.0",
  "pandas>=2.0",
  "pillow>=10.0",
  "pytest>=5.2",
  "scipy>=1.0.0",
  "sphinx>=7.0",
  "tensorflow>2.4,<2.16",
  "xarray>=2023.0",
]

[project.optional-dependencies]
dev = [
  "build>=0.5",
  "flake8",
  "pre-commit",
  "pylint",
]
doc = [
  "sphinx>=7.0",
  "sphinx_rtd_theme>=2.0",
  "sphinx-click>=4.0",
]
test = [
  "pytest>=5.2",
]

[project.urls]
homepage = "https://github.com/NREL/sup3r"
documentation = "https://nrel.github.io/sup3r/"
repository = "https://github.com/NREL/sup3r"

[tool.ruff]
line-length = 79
indent-width = 4

target-version = "py38"

[tool.ruff.lint]
fixable = ["ALL"]
preview = true
select = [
  "E", # pycodestyle
  "F", # Pyflakes
  "W", # Warning
  "B", # flake8-bugbear
  "C901", # too-complex 
  "D", # pydocstyle
  "ARG", # flake8-unused-arguments
  "I002", # isort
  "N", # pep8-naming
  "C4", # flake8-comprehensions
  "PL", # Pylint
  "C", # convention
  ]

ignore = [
  "B008", # function-call-in-default-argument
  "B024", # abstract-base-class-without-abstract-method
  "B028", # no-explicit-stacklevel
  "B905", # zip-without-explicit-strict
  "D105", # undocumented-magic-method
  "D202", # no-blank-line-after-function
  "D205", # blank-line-after-summary
  "D209", # new-line-after-last-paragraph
  "D212", # multi-line-summary-first-line
  "D213", # multi-line-summary-second-linek
  "D400", # ends-in-period
  "D401", # non-imperative-mood
  "D413", # blank-line-after-last-section
  "D415", # ends-in-punctuation
  "E902", # io-error
  "PLR0913", # too-many-arguments
  "D107", # undocumented-public-init
  "D200", # fits-on-one-line
  "D204", # one-blank-line-after-class
  "PLR2004", # magic-value-comparison
  "PLR0904", # too-many-public-methods 
  "PLR0917", # too-many-positional
  "PLR6301", # no-self-use
  "PLR6201", # literal-membership
  "PLR0914", # too-many-locals
  "PLR0915", # too-many-statements
  "PLR6104", # non-augmented-assignment 
  "N806", # non-lowercase-variable-in-function
  "N803", # lowercase-argument
  "N802", # invalid-function-name
  "PLW2901", # redefined-loop-name
  "PLW1514", # unspecified-encoding
  "PLC0415", # import-outside-top-level
  "C408", # unnecessary-collection-call 
  "ARG005", # unused-lambda-argument
  ]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "F401", # unused-import
  ]
"docs/source/conf.py" = [
  "E402", # unused-import
  ]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
include-package-data = true
packages = ["sup3r"]

[tool.setuptools_scm]
version_file = "sup3r/_version.py"

[tool.pixi.project]
channels = ["conda-forge", "anaconda", "main"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = "==3.11"
cftime = ">=1.6.2"
dask = ">=2022.0"
h5netcdf = ">=1.1.0"
pillow = ">=10.0"
matplotlib = ">=3.1"
numpy = ">=1.7.0"
pandas = ">=2.0"
scipy = ">=1.0.0"
tensorflow = ">2.4,<2.16"
xarray = ">=2023.0"

[tool.pixi.pypi-dependencies]
NREL-sup3r = { path = ".", editable = true }
NREL-rex = { version = ">=0.2.84" }
NREL-phygnn = { version = ">=0.0.23" }
NREL-gaps = { version = ">=0.6.0" }
NREL-farms = { version = ">=1.0.4" }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev", "doc", "test"], solve-group = "default" }
doc = { features = ["doc"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.feature.doc.dependencies]
sphinx = ">=7.0"
sphinx_rtd_theme = ">=2.0"

[tool.pixi.feature.test.dependencies]
pytest = ">=5.2"

[tool.pixi.feature.dev.dependencies]
build = ">=0.6"
twine = ">=5.0"
ruff = ">=0.2"
